--- a/index.html
+++ b/index.html
@@ -1,29 +1,19 @@
-<html lang="pt-br">
-<!DOCTYPE html>
-<head>
-      <!--cabeçalho invisível-->
-  <meta vharet="UTF-8">
- <title>Mary On A Cross</title>
-</head>
- <body>
-    <h1 style="color:aqua"> Titulo Principal </h1>
-    <br> texto em negrito</b>
-    <!--Formatação de texto-->
-<br>
-<strong>Texto Importante</strong>
-<br>
-<i>texto itálico</i>
-<br>
-<mark>Texto Marcado</mark>
-<br>
-<small>Texto pequenino</small>
-<br>
-<del>Texto traçado</del>
-<br>
-<u>Texto Sublinhado</u>
-<br>
-Log<sub>10</sub>
-<br>
-Base<sup>expoente</sup>
- </body>
-</html>
+    <html lang="pt-br">
+    <!DOCTYPE html>
+    <head>
+        <!--cabeçalho invisível-->
+    <meta vharet="UTF-8">
+    <title>Mary On A Cross</title>
+    <style> 
+    body{
+
+        background-color: aquamarine;
+        text-align: center;
+        color: color-mix(in srgb, color percentage, color percentage);
+        }
+    </head>
+ 
+    <body>
+   
+    </body>
+    </html>
