--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
     <!DOCTYPE html>
-   <html lang="pt-br">
-            
-            <head> 
+   <html lang="pt-br">      
+    <head> 
+            <meta charset="UTF-8">
+            <title>SERGINHO</title>
+            <link rel="stylesheet" href="style.css">
+    </head>
+        <body>
 
 
-
-            </head>
-
-            <body>
-
-
-            </body>
-            </html>
+        </body>
+        </html>
