--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
     <!DOCTYPE html>
    <html lang="pt-br">      
     <head> 
-            <meta charset="UTF-8">
-            <title>SERGINHO</title>
-            <link rel="stylesheet" href="style.css">
+         <meta charset="UTF-8">
+         <title>SERGINHO</title>
+         <link rel="stylesheet" href="style.css">
     </head>
         <body>
-
-
+            <header>
+               <img src="prisma.png" alt="">
+            </header>
         </body>
         </html>
