--- a/index.html
+++ b/index.html
@@ -5,9 +5,22 @@
          <title>SERGINHO</title>
          <link rel="stylesheet" href="style.css">
     </head>
+
         <body>
             <header>
-               <img src="prisma.png" alt="">
+               <img src="prisma.png" alt="newton">
+               <h1>Pink Floyd</h1>
             </header>
+            <main>
+                <div>
+                    <h2>the best album</h2>
+                        <ol>
+                          <li>ano de lançamento: 1 de março de 1973</li>
+                          <li>gravado no: Abbey Road Studios</li>
+                          <li>mais de 15 milhoẽs de cópias pelo mundo</li>
+                        </ol>
+                </div>
+            </main>
         </body>
+
         </html>
