--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             </header>
             <main>
                 <div>
-                    <h2>the best album</h2>
+                    <h2>melhor albúm</h2>
                         <ol>
-                          <li>ano de lançamento: 1 de março de 1973</li>
-                          <li>gravado no: Abbey Road Studios</li>
-                          <li>a</li>
+                          <li>ano de lançamento:1 de março de 1973</li>
+                          <li>gravado no:Abbey Road Studios</li>
+                          <li>15 milhões de cópias vendidas</li>
                         </ol>
                 </div>
             </main>
