--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             </header>
             <main>
                 <div>
-                    <h2>melhor albúm</h2>
+                    <h2>melhor album</h2>
                         <ol>
                           <li>ano de lançamento:1 de março de 1973</li>
                           <li>gravado no:Abbey Road Studios</li>
@@ -23,4 +23,4 @@
             </main>
         </body>
 
-        </html>
+     </html>
