--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
 
         <body>
             <header>
-               <img src="prisma.png"alt="newton">
+               <img src="nasa.jpg"alt="newton">
                <h1>Pink Floyd</h1>
             </header>
-            <main>
+            <main class="principal">
                 <div>
                     <h2>melhor album</h2>
                         <ol>
-                          <li>ano de lançamento:1 de março de 1973</li>
-                          <li>gravado no:Abbey Road Studios</li>
+                          <li>fundador da NASA:Dwight D. Eisenhower</li>
+                          <img src="planeta.jpg"alt="newton">
+                          <li>Em 2020, a equipe anunciou a descoberta do planeta d, do tamanho da Terra e zona habitável,</li>
                           <li>15 milhões de cópias vendidas</li>
                         </ol>
+                </div>
+                <div>
+                    <h2>Compositores</h2>
+                    <ul>
+                        <li>Sonda Voyager</li>
+                        <li>G</li>
+                        <li>a</li>
+                    </ul>
                 </div>
             </main>
         </body>
