--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
         <body>
             <header>
                <img src="nasa.jpg"alt="newton">
-               <h1>Pink Floyd</h1>
+               <h1>NASA</h1>
             </header>
             <main class="principal">
                 <div>
                     <h2>melhor album</h2>
                         <ol>
+                            <img src="ddd.png"alt="newton">
                           <li>fundador da NASA:Dwight D. Eisenhower</li>
                           <img src="planeta.jpg"alt="newton">
                           <li>Em 2020, a equipe anunciou a descoberta do planeta d, do tamanho da Terra e zona habitável,</li>
