--- a/index.html
+++ b/index.html
@@ -23,14 +23,20 @@
                         </ol>
                 </div>
                 <div>
-                    <h2>Compositores</h2>
+                    <h2>Galáxias e Sondas</h2>
                     <ul>
+                        <img src="voyager.png"alt="newton">
                         <li>Sonda Voyager</li>
-                        <li>G</li>
+                        <img src="andromeda.png"alt="newton">
+                        <li>A galáxia Andrômeda</li>
                         <li>a</li>
                     </ul>
                 </div>
             </main>
+              <footer class="rodape">
+                  <h2>SEDE: Washington, D.C., EUA</h2>
+                  <p></p>
+              </footer>
         </body>
 
      </html>
