--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
             </header>
             <main class="principal">
                 <div>
-                    <h2>melhor album</h2>
+                    <h2>Informações</h2>
                         <ol>
-                            <img src="ddd.png"alt="newton">
+                            <img src="ddd.png" alt="newton"class="imagem">
                           <li>fundador da NASA:Dwight D. Eisenhower</li>
-                          <img src="planeta.jpg"alt="newton">
+                          <img src="planeta.jpg" alt="newton" class="imagem">
                           <li>Em 2020, a equipe anunciou a descoberta do planeta d, do tamanho da Terra e zona habitável,</li>
-                          <li>15 milhões de cópias vendidas</li>
+                          <img src="sagan.jpg" alt="newton"class="imagem">
+                          <li>um dos pioneiros no projeto das sondas Voyager,Carl Sagan, esse projeto foi bastante citado em seu livro Cosmos</li>
                         </ol>
                 </div>
                 <div>
                     <h2>Galáxias e Sondas</h2>
                     <ul>
-                        <img src="voyager.png"alt="newton">
+                        <img src="voyager.png" alt="newton" class="imagem">
                         <li>Sonda Voyager</li>
-                        <img src="andromeda.png"alt="newton">
+                        <img src="andromeda.png" alt="newton" class="imagem">
                         <li>A galáxia Andrômeda</li>
                         <li>a</li>
                     </ul>
