--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
         <body>
             <header>
-               <img src="nasa.jpg"alt="newton">
+               <img src="nasa.jpg" alt="newton" class="imagem">
                <h1>NASA</h1>
             </header>
             <main class="principal">
