--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <header>
                <img src="nasa.jpg" alt="newton" class="imagem">
                <h1>NASA</h1>
+                <a href="index2.html">Link página 2</a>
             </header>
             <main class="principal">
                 <div>
