--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>PALOMA</title>
         <link rel="stylesheet" href="style.css">
-    </head>
+    </head = class "cabecalho">
        <body>
          <header>
             <img src="voyager.jpg" alt="newton" class="imagem">
