--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
             <h1>lINK DE SITES SOBRE A NASA E PROJETOS</h1>
 
          </header>
-         <main> 
+         <main class="principal"> 
             <h2>Clique no link abaixo</h2>
              <ul>
                 <li>
