--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <header>
                <img src="nasa.jpg" alt="newton" class="imagem">
                <h1>NASA</h1>
-                <a href="index2.html">Link página 2</a>
+                <a href="index2.html" id="link">Link página 2</a>
             </header>
             <main class="principal">
                 <div>
