--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         <li>Sonda Voyager</li>
                         <img src="andromeda.png" alt="newton" class="imagem">
                         <li>A galáxia Andrômeda</li>
+                        <li>_Caracteristicas_</li>
                         <li>A Galáxia Andrômeda é chamada assim por conta da usa proximidade da constelação de Andrômeda. Também possui a mesma forma espiral da Via Láctea, sendo a maior de todas as galáxias. Bem como também possui massa praticamente igual a nossa, com cerca de 7.1X10¹¹ massas solares. Sendo ela equivalente a 332.946 Terras. Assim como dispõe de 180 a 220 mil anos luz de diâmetro.</li>
                     </ul>
                 </div>
