--- a/index2.html
+++ b/index2.html
@@ -8,7 +8,7 @@
        <body>
          <header>
             <img src="voyager.jpg" alt="newton" class="imagem">
-            <h1>lINK DE SITES SOBRE A NASA E PROJETOS</h1>
+            <h1>LINK DE SITES SOBRE A NASA E PROJETOS</h1>
             <a href="index2.html" id="link"></a>
 
          </header>
@@ -16,7 +16,7 @@
             <h2>Clique no link abaixo</h2>
              <ul>
                 <li>
-                      <a href="https://apod.nasa.gov/apod/archivepixFull.html">Site Oficial</a>
+                      <a href="https://www.nasa.gov/">Site Oficial</a>
                 </li>
 
              </ul>
